--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ name = "grouper-lib"
 version = "0.1.0"
 edition = "2021"
 description = "utilities dependency for grouper-desktop & grouper-cli"
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+license = "MIT"
 
 [dependencies]
 rand = "*"
