--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,14 +1,14 @@
 [package]
 name = "grouper-lib"
-version = "0.1.0"
+version = "0.1.10"
 edition = "2021"
 description = "utilities dependency for grouper-desktop & grouper-cli"
 license = "MIT"
 
 [dependencies]
-rand = "*"
+rand = "0.8.5"
 serde = { version = "1.0", features = ["derive"]}
-serde_json = "*"
-csv = "*"
+serde_json = "1.0"
+csv = "1.2.0"
 tokio = { version = "1.25", features = ["full"] }
 thiserror = "1.0"
